--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,28 @@
 	<groupId>at.orz</groupId>
 	<artifactId>avocadodb-java-driver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<inceptionYear>2012</inceptionYear>
 	<packaging>jar</packaging>
 
 	<name>avocadodb-java-driver</name>
+	<description>AvocadoDB Java Driver</description>
 	<url>http://maven.apache.org</url>
+
+	<licenses>
+		<license>
+			<name>Apache License 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>tamtam180</id>
+			<name>tamtam180</name>
+			<url>http://mt.orz.at/</url>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
