change scope logback-classic in pom.xml test => provied.

--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.1</version>
 			<type>jar</type>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
