--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,15 @@
                 </configuration>
             </plugin>
 
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<uniqueVersion>false</uniqueVersion>
+					<retryFailedDeploymentCount>10</retryFailedDeploymentCount>
+				</configuration>
+			</plugin>
+
 		</plugins>
 		
 		<!-- Deply with FTP -->
